# Salary-Prediction

./: pylock.toml  pyproject.toml  requirements.txt
src/: Exception.py  logger.py
src/compoments/Notebooks/: EDA.ipynb
src/salary_prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
