[project]
name = "salary-prediction"
version = "0.1.0"
description = "A data science project for salary prediction or medical classification"
authors = [
    { name = "Divyam", email = "divyamdave2003@gmail.com" }
]
requires-python = ">=3.9"

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"